# sketch-follower

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yaml  package.xml  setup.cfg  setup.py
config/: config.rviz  velocity_control.yaml
launch/: gazebo.launch  gazebo.launch.py  rviz.launch  rviz.launch.py  rviz_controller.launch.py  rviz_teleop.launch.py  rviz_viewer.launch.py
models/: model.sdf
robot_description/meshes/: 2d_base_link.stl  2d_link.stl  3d_arm_link.stl  3d_end_effector.stl
robot_description/sdf/: model.sdf
robot_description/urdf/: 2d_2dof.xacro  2d_3dof.xacro  3d_4dof.xacro  helpers.xacro  model.xacro  ros2_control.xacro
scripts/: controller.py
scripts/control/: deepc.py
scripts/ros_interfaces/: ros_interface.py
sketch_follower/: CMakeLists.txt  controller.py  package.xml  teleop.py
sketch_follower/arduino/: arduino_interface.cpp
sketch_follower/config/: 2d_2dof.rviz  effort_control.yaml  velocity_control.yaml
sketch_follower/control/: deepc.py  linear_mpc.py
sketch_follower/launch/: gazebo.launch  rviz.launch
sketch_follower/model/: dynamics.py  kinematics.py
sketch_follower/ros/: cursor_publisher.py  ros_interface.py
sketch_follower/scripts/: controller.py  cursor_publisher.py  kinematics.py  linear_mpc.py  moveit_interface.cpp  ros_interface.py
sketch_follower_config/: .setup_assistant  CMakeLists.txt  package.xml
sketch_follower_config/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  robot_arm.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml
sketch_follower_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
sketch_follower_control/: CMakeLists.txt  package.xml
sketch_follower_control/scripts/: control.py  kinematics.py
sketch_follower_moveit/: .setup_assistant  CMakeLists.txt  package.xml
sketch_follower_moveit/config/: gazebo_robot_arm.urdf  gazebo_sketch_follower_2d_2dof.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  (+4 more)
(+44 files in other folders)
