<?xml version="1.0"?>
<package format="2">
  <name>sketch_follower</name>
  <version>0.0.0</version>
  <description>The sketch_follower package</description>

  <maintainer email="khaled.jalloul@hotmail.com">Khaled Jalloul</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
