<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sketch_follower</name>
  <version>0.0.0</version>
  <description>The sketch_follower package</description>

  <maintainer email="khaled.jalloul@hotmail.com">Khaled Jalloul</maintainer>

  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
